Hardware/GMS_skx_tma_metrics_api.h

   
    float skx_instr_per_load( const uint64_t inst_retired_any,
                              const uint64_t mem_inst_retired_all_loads);
   
    float skx_instr_per_store( const uint64_t inst_retired_any,
                               const uint64_t mem_inst_retired_all_stores);
  
    float skx_instr_per_branch( const uint64_t inst_retired_any,
                                const br_inst_retired_all_branches);
   
    float skx_instr_per_call( const uint64_t inst_retired_any,
                              const uint64_t br_inst_retired_near_call);
   
    float skx_br_inst_per_taken_br( const uint64_t br_inst_retired_all_branches,
                                    const uint64_t br_inst_retired_near_taken);
  
    uint64_t skx_flops( const uint64_t fp_arith_inst_retired_scalar_single,
                     const uint64_t fp_arith_inst_retired_scalar_double,
		     const uint64_t fp_arith_inst_retired_128B_packed_double,
		     const uint64_t fp_arith_inst_retired_128B_packed_single,
		     const uint64_t fp_arith_inst_retired_256B_packed_double,
		     const uint64_t fp_arith_inst_retired_256B_packed_single,
		     const uint64_t fp_arith_inst_retired_512B_packed_double,
	          	const uint64_t fp_arith_inst_retired_512B_packed_single);
   
    float skx_instr_per_scalar_fp_sp( const uint64_t instr_retired_any,
                                      const uint64_t fp_arith_instr_retired_scalar_single);
  
    float skx_instr_per_avx128( const uint64_t instr_retired_any,
                                const uint64_t fp_arith_instr_retired_128B_packed_single,
				const uint64_t fp_arith_instr_retired_128B_packed_double);
   
    float skx_instr_per_avx256( const uint64_t instr_retired_any,
                                const uint64_t fp_arith_instr_retired_256B_packed_single,
				const uint64_t fp_arith_instr_retired_256B_packed_double);
   
    float skx_instr_per_avx512( const uint64_t instr_retired_any,
                                const uint64_t fp_arith_instr_retired_512B_packed_single,
				const uint64_t fp_arith_instr_retired_512B_packed_double);
  
    float skx_uops_by_dsb( const uint64_t idq_dsb_uops,
                           const uint64_t uops_delivered_total);
  
    float skx_instr_per_baclears( const uint64_t instr_retired_any,
				  const uint64_t baclears_any);
    
      float skx_ports_util_0_clks( const float cycles_ports_0_util,
                                   const uint64_t core_clks);
   
      float skx_ports_util_1_clks( const float cycles_ports_1_util,
                                   const uint64_t core_clks);
    
      float skx_ports_util_2_clks( const float cycles_ports_2_util,
                                   const uint64_t core_clks);
     
      float skx_ports_util_3m_clks( const float cycles_ports_3m_util,
                                   const uint64_t core_clks);
      
      float skx_port_0_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_0,
                             const uint64_t core_clks);
     
      float skx_port_1_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_1,
                             const uint64_t core_clks);
     
      float skx_port_5_clks( const uint64_t UOPS_DISPATCHED_PORT_PORT_5,
                             const uint64_t core_clks);