Hardware/GMS_skx_tma_bindings.f90


              function skx_instr_per_load(inst_retired_any, &
                                          mem_inst_retired_all_loads) &
                                          bind(c,name="skx_instr_per_load")
                     integer(c_size_t) :: instr_retired_any
                     integer(c_size_t) ::  mem_inst_retired_all_loads
                     real(c_float)     :: skx_instr_per_load
              end function skx_instr_per_load
              
        end interface


      interface

           function skx_instr_per_store(inst_retired_any, &
                                        mem_inst_retired_all_stores) &
                                          bind(c,name="skx_instr_per_store")
                     integer(c_size_t) :: instr_retired_any
                     integer(c_size_t) ::  mem_inst_retired_all_stores
                     real(c_float)     :: skx_instr_per_store
              end function skx_instr_per_store
           
     end interface


     interface

         function skx_instr_per_branch( inst_retired_any, &
                                        br_inst_retired_all_branches) &
                                        bind(c,name="skx_instr_per_branch")
                  integer(c_size_t) :: inst_retired_any
                  integer(c_size_t) ::   br_inst_retired_all_branches
                  real(c_float)     :: skx_instr_per_branch
         end function skx_instr_per_branch
         

      end interface

      interface

         function skx_instr_per_call(  inst_retired_any, &
                                       br_inst_retired_near_call) &
                                       bind(c,name="skx_instr_per_call")
                  integer(c_size_t) :: inst_retired_any
                  integer(c_size_t) :: br_inst_retired_near_call
                  real(c_float)     :: skx_instr_per_call
         end function skx_instr_per_call
         

      end interface

      interface

          function skx_br_inst_per_taken_br( br_inst_retired_all_branches, &
                                             br_inst_retired_near_taken) &
                                             bind(c,name="skx_br_inst_per_taken")
                   integer(c_size_t) ::  br_inst_retired_all_branche
                   integer(c_size_t) ::  br_inst_retired_near_taken
                   real(c_float)     :: skx_br_inst_per_taken_br
          end function skx_br_inst_per_taken_br
          

       end interface

       interface

           function skx_flops(  fp_arith_inst_retired_scalar_single,&
                     fp_arith_inst_retired_scalar_double,&
		     fp_arith_inst_retired_128B_packed_double,&
		     fp_arith_inst_retired_128B_packed_single,&
		      fp_arith_inst_retired_256B_packed_double,&
		     fp_arith_inst_retired_256B_packed_single,&
		     fp_arith_inst_retired_512B_packed_double,&
		     fp_arith_inst_retired_512B_packed_single) &
                     bind(c,name="skx_flops")
              integer(c_size_t) :: fp_arith_inst_retired_scalar_single
              integer(c_size_t) :: fp_arith_inst_retired_scalar_double
              integer(c_size_t) ::  fp_arith_inst_retired_128B_packed_double
              integer(c_size_t) ::  fp_arith_inst_retired_128B_packed_single
              integer(c_size_t) ::  fp_arith_inst_retired_256B_packed_double
              integer(c_size_t) ::  fp_arith_inst_retired_256B_packed_single
              integer(c_size_t) ::  fp_arith_inst_retired_512B_packed_double
              integer(c_size_t) ::  fp_arith_inst_retired_512B_packed_single
              integer(c_size_t)     :: skx_flops
           end function skx_flops
           
        end interface

        interface

           function skx_instr_per_flop( instr_retired_any, &
                                       flops) &
                                       bind(c,name="skx_instr_per_flop")
                   integer(c_size_t) :: instr_retired_any
                   integer(c_size_t) :: flops
                   real(c_float)     :: skx_instr_per_flop
           end function skx_instr_per_flop
           

        end interface


        interface

            function skx_instr_per_scalar_fp_sp( instr_retired_any,&
                                                fp_arith_instr_retired_scalar_single) &
                                                bind(c,name="skx_instr_per_scalar_fp_sp")
                          integer(c_size_t) :: instr_retired_any
                          integer(c_size_t) :: fp_arith_instr_retired_scalar_single
                          real(c_float)     :: skx_instr_per_scalar_fp_sp
            end function skx_instr_per_scalar_fp_sp
            
    
         end interface

         interface

            function skx_instr_per_scalar_fp_dp( instr_retired_any,&
                                                fp_arith_instr_retired_scalar_double) &
                                                bind(c,name="skx_instr_per_scalar_fp_dp")
                          integer(c_size_t) :: instr_retired_any
                          integer(c_size_t) :: fp_arith_instr_retired_scalar_double
                          real(c_float)     :: skx_instr_per_scalar_fp_dp
            end function skx_instr_per_scalar_fp_dp
            
    
         end interface

         interface

              function skx_instr_per_avx128(  instr_retired_any,&
                                              fp_arith_instr_retired_128B_packed_single,&
			                      fp_arith_instr_retired_128B_packed_double) &
                                              bind(c,name="skx_instr_per_avx128")
                     integer(c_size_t) :: instr_retired_any
                     integer(c_size_t) ::  fp_arith_instr_retired_128B_packed_single
                     integer(c_size_t) ::  fp_arith_instr_retired_128B_packed_double
                     real(c_float)     :: skx_instr_per_avx128
              end function skx_instr_per_avx128
              

         end interface


         interface

              function skx_instr_per_avx256(  instr_retired_any,&
                                              fp_arith_instr_retired_256B_packed_single,&
			                      fp_arith_instr_retired_256B_packed_double) &
                                              bind(c,name="skx_instr_per_avx256")
                     integer(c_size_t) :: instr_retired_any
                     integer(c_size_t) ::  fp_arith_instr_retired_256B_packed_single
                     integer(c_size_t) ::  fp_arith_instr_retired_256B_packed_double
                     real(c_float)     :: skx_instr_per_avx256
              end function skx_instr_per_avx256
              

         end interface

           
        interface

              function skx_instr_per_avx512(  instr_retired_any,&
                                              fp_arith_instr_retired_512B_packed_single,&
			                      fp_arith_instr_retired_512B_packed_double) &
                                              bind(c,name="skx_instr_per_avx512")
                     integer(c_size_t) :: instr_retired_any
                     integer(c_size_t) ::  fp_arith_instr_retired_512B_packed_single
                     integer(c_size_t) ::  fp_arith_instr_retired_512B_packed_double
                     real(c_float)     :: skx_instr_per_avx512
              end function skx_instr_per_avx512
              

       end interface


       interface

          function skx_uops_by_dsb( idq_dsb_uops, &
                                    uops_delivered_total) &
                                    bind(c,name="skx_uops_by_dsb")
                    integer(c_size_t) :: idq_dsb_uops
                    integer(c_size_t) :: uops_delivered_total
                    real(c_float)     :: skx_uops_by_dsb
          end function skx_uops_by_dsb
          
       end interface

       interface

          function skx_instr_per_baclears( instr_retired_any, &
                                           baclears_any) &
                                           bind(c,name="skx_instr_per_baclears")
                  integer(c_size_t) :: instr_retired_any
                  integer(c_size_t) :: baclears_any
                  real(c_float)     :: skx_instr_per_baclears
          end function skx_instr_per_baclears
          

       end interface

       interface

          function skx_ports_util_0_clks( cycles_ports_0_util, &
                                          core_clks) &
                                          bind(c,name="skx_ports_util_0_clks")
                    integer(c_size_t) :: cycles_ports_0_util
                    integer(c_size_t) :: core_clks
                    real(c_float)     :: skx_ports_util_0_clks
          end function skx_ports_util_0_clks
          

       end interface

       
       interface

          function skx_ports_util_1_clks( cycles_ports_1_util, &
                                          core_clks) &
                                          bind(c,name="skx_ports_util_1_clks")
                    integer(c_size_t) :: cycles_ports_1_util
                    integer(c_size_t) :: core_clks
                    real(c_float)     :: skx_ports_util_1_clks
          end function skx_ports_util_1_clks
          

       end interface


       interface

          function skx_ports_util_2_clks( cycles_ports_2_util, &
                                          core_clks) &
                                          bind(c,name="skx_ports_util_2_clks")
                    integer(c_size_t) :: cycles_ports_2_util
                    integer(c_size_t) :: core_clks
                    real(c_float)     :: skx_ports_util_2_clks
          end function skx_ports_util_2_clks
          

       end interface

       interface

          function skx_ports_util_3m_clks( cycles_ports_3m_util, &
                                          core_clks) &
                                          bind(c,name="skx_ports_util_3m_clks")
                    integer(c_size_t) :: cycles_ports_3m_util
                    integer(c_size_t) :: core_clks
                    real(c_float)     :: skx_ports_util_3m_clks
          end function skx_ports_util_3m_clks
          

       end interface

       interface


            function skx_port_0_clks(UOPS_DISPATCHED_PORT_PORT_0, &
                                     core_clks) &
                                     bind(c,name="skx_port_0_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_0
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_0_clks
            end function skx_port_0_clks
            
          
         end interface

        interface


            function skx_port_1_clks(UOPS_DISPATCHED_PORT_PORT_1, &
                                     core_clks) &
                                     bind(c,name="skx_port_1_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_1
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_1_clks
            end function skx_port_1_clks
            
          
        end interface

         
        interface


            function skx_port_5_clks(UOPS_DISPATCHED_PORT_PORT_5, &
                                     core_clks) &
                                     bind(c,name="skx_port_5_clks")
                 integer(c_size_t) :: UOPS_DISPATCHED_PORT_PORT_5
                 integer(c_size_t) :: core_clks
                 real(c_float)     :: skx_port_5_clks
            end function skx_port_5_clks
            
          
       end interface

         
       interface

